# orchael-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  INSTALL.md  README.md  SETUP_GITHUB_ACTIONS.md  TODO.md  pyproject.toml  test_runner.sh
.cursor/rules/: orchael-sdk.mdc  python.mdc
.github/: README.md  dependabot.yaml
.github/workflows/: publish.yml  security.yml  test.yml
examples/: __init__.py
examples/echo/: README.md  __init__.py  config.yaml  echo_processor.py  pyproject.toml
examples/echo/echo_processor/: __init__.py
examples/echo/tests/: __init__.py  test_echo_processor.py
examples/nodejs-echo/: README.md  config.yaml  package-lock.json  package.json
examples/nodejs-echo/nodejs_echo_processor/: index.js
examples/ollama/: README.md  config.yaml  ollama_processor.py  pyproject.toml  test_env.py
examples/ollama/tests/: __init__.py  test_ollama_processor.py
orchael-sdk/: CLI_README.md  README.md  SERVER_README.md  demo_server.py  example_config.yaml  orchael_sdk_cli.py  orchael_sdk_cli_server.py  pyproject.toml  run_tests.py  test-runner.sh
orchael-sdk/orchael_sdk/: __init__.py  cli.py  orchael_chat_processor.py  py.typed  server.py
orchael-sdk/tests/: README.md  conftest.py  test_chat_types.py  test_cli.py  test_cli_entry_point.py  test_orchael_chat_processor.py  test_server.py
orchael_sdk/: __init__.py  chat_types.py  cli.py  orchael_chat_processor.py
tests/: __init__.py  test_cli.py  test_cli_entry_point.py  test_example_processors.py  test_main_package.py
