[project]
name = "orchael-sdk-echo-example"
version = "0.1.0"
description = "Echo example implementation using the Orchael SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "orchael-sdk @ file:///Users/mark/src/everydaydevops/orchael-sdk"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echo_processor"]

[tool.hatch.metadata]
allow-direct-references = true
