[project]
name = "orchael-sdk-ollama-example"
version = "0.1.0"
description = "Ollama integration example using the Orchael SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "orchael-sdk @ {root:uri}/../../orchael-sdk",
    "requests>=2.25.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-ollama>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
